# cpp-programming

./: .gitignore
bitwise_operators/color_packing/: CMakeLists.txt
bitwise_operators/color_packing/color_packing/: CMakeLists.txt  color_packing.cpp  color_packing.h
bitwise_operators/compound_bitwise_operator/: CMakeLists.txt
bitwise_operators/compound_bitwise_operator/compound_bitwise_operator/: CMakeLists.txt  compound_bitwise_operator.cpp  compound_bitwise_operator.h
bitwise_operators/logical_bitwise_operator/: CMakeLists.txt
bitwise_operators/logical_bitwise_operator/logical_bitwise_operator/: CMakeLists.txt  logical_bitwise_operator.cpp  logical_bitwise_operator.h
bitwise_operators/masks/: CMakeLists.txt
bitwise_operators/masks/masks/: CMakeLists.txt  masks.cpp  masks.h
bitwise_operators/printing_integers_as_binary/: CMakeLists.txt
bitwise_operators/printing_integers_as_binary/printing_integers_as_binary/: CMakeLists.txt  printing_integers_as_binary.cpp  printing_integers_as_binary.h
bitwise_operators/shift_operators/: CMakeLists.txt
bitwise_operators/shift_operators/shift_operators/: CMakeLists.txt  shift_operators.cpp  shift_operators.h
control_flow/else_if/: CMakeLists.txt
control_flow/else_if/else_if/: CMakeLists.txt  else_if.cpp  else_if.h
control_flow/if_clause/: CMakeLists.txt
control_flow/if_clause/if_clause/: CMakeLists.txt  if_clause.cpp  if_clause.h
control_flow/integral_logic_operators/: CMakeLists.txt
control_flow/integral_logic_operators/integral_logic_operators/: CMakeLists.txt  integral_logic_operators.cpp  integral_logic_operators.h
control_flow/leap_year/: CMakeLists.txt
control_flow/leap_year/leap_year/: CMakeLists.txt  leap_year.cpp  leap_year.h
control_flow/switch_statement/: CMakeLists.txt
control_flow/switch_statement/switch_statement/: CMakeLists.txt  switch_statement.cpp  switch_statement.h
data_conversions/explicit_conversion/: CMakeLists.txt
data_conversions/explicit_conversion/explicit_conversion/: CMakeLists.txt  explicit_conversion.cpp  explicit_conversion.h
data_conversions/implicit_conversion/: CMakeLists.txt
data_conversions/implicit_conversion/implicit_conversion/: CMakeLists.txt  implicit_conversion.cpp  implicit_conversion.h
literals_constants/Literals/: CMakeLists.txt
literals_constants/Literals/Literals/: CMakeLists.txt  Literals.cpp  Literals.h
literals_constants/constant_expression/: CMakeLists.txt
literals_constants/constant_expression/constant_expression/: CMakeLists.txt  constant_expression.cpp  constant_expression.h
literals_constants/constants/: CMakeLists.txt
literals_constants/constants/constants/: CMakeLists.txt  constants.cpp  constants.h
literals_constants/constinit/: CMakeLists.txt
literals_constants/constinit/constinit/: CMakeLists.txt  constinit.cpp  constinit.h
operations/compound_operators/: CMakeLists.txt
operations/compound_operators/compound_operators/: CMakeLists.txt  compound_operators.cpp  compound_operators.h
operations/increment_decrement/: CMakeLists.txt
operations/increment_decrement/increment_decrement/: CMakeLists.txt  increment_decrement.cpp  increment_decrement.h
operations/numeric_limits/: CMakeLists.txt
operations/numeric_limits/numeric_limits/: CMakeLists.txt  numeric_limits.cpp  numeric_limits.h
operations/output_formatting/: CMakeLists.txt
operations/output_formatting/output_formatting/: CMakeLists.txt  output_formatting.cpp  output_formatting.h
starting/CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp
starting/data_input_output/: CMakeLists.txt
starting/data_input_output/data_input_output/: CMakeLists.txt  data_input_output.cpp  data_input_output.h
starting/decimals_integers/: CMakeLists.txt
starting/decimals_integers/decimals_integers/: CMakeLists.txt  decimals_integers.cpp  decimals_integers.h
starting/project_one/: CMakeLists.txt
starting/project_one/project_one/: CMakeLists.txt  project_one.cpp  project_one.h
starting/statements_and_functions/: CMakeLists.txt
starting/statements_and_functions/statements_and_functions/: CMakeLists.txt  statements_and_functions.cpp  statements_and_functions.h
variables_dtypes/decimal_integers/: CMakeLists.txt
variables_dtypes/decimal_integers/decimal_integers/: CMakeLists.txt  decimal_integers.cpp  decimal_integers.h
variables_dtypes/fractional_numbers/: CMakeLists.txt
variables_dtypes/fractional_numbers/fractional_numbers/: CMakeLists.txt  fractional_numbers.cpp  fractional_numbers.h
variables_dtypes/integer_modifiers/: CMakeLists.txt
variables_dtypes/integer_modifiers/integer_modifiers/: CMakeLists.txt  integer_modifiers.cpp  integer_modifiers.h
